2000-01-10  Jonathan Blandford  <jrb@redhat.com>

	* gnome-gconf.[ch]: New module.  Lets you
	convert GtkWidget <-> GConfValue.  Will be useful in a number of
	places.

2000-01-10  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c (gnome_about_fill_info): The fonts defined by the
	current GTK+ style are now honored

2000-01-10  Havoc Pennington  <hp@redhat.com>

	* gnome-about.c (gnome_about_construct): push visual/cmap when
	creating the canvas so we can render gdkpixbuf to it reliably

2000-01-10  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.[ch] : Complete rewrite using the GnomeCanvas, a new
	constructor (gnome_about_new_url) allows the easy inclusion of
	URLs for both the project and individual authors.

2000-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gnome-pixmap.c: use the new gdk-pixbuf scaling functions.
	* gnome-pixmap.h: use the new gdk-pixbuf scaling functions.
	* gnome-stock.c (gdk_pixbuf_new_from_stock_pixmap_entry): use the
	new gdk-pixbuf scaling functions.

2000-01-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (app_book_delete_event, app_toplevel_delete_event):
	fixed a bug that kept a deleted empty toplevel in windows list,
	causing occasional warnings & segfaults.
	
2000-01-06  Elliot Lee  <sopwith@redhat.com>

	* gnome-icon-list.[ch]: Port to gdk-pixbuf. Switch from a linked list to an array for storing the icons (faster!)
	* gnome-icon-entry.[ch], gnome-icon-sel.[ch]: Port to gdk-pixbuf.

	* gnome-canvas-pixbuf.[ch]: Pull updates from gdk-pixbuf module.

	* gnome-druid.c: When going to a new page, unmap the old one unconditionally.

Wed Jan 05 23:41:20 2000  George Lebl <jirka@5z.com>

	* gnome-client.[ch]: the save_yourself signal has a return value but
	  the gtk_signal_emit wasn't catching it.  So get it and ignore it
	  to avoid segfaults and warnings.

2000-01-05  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c: Removed all the hardcoded layout constants and